# CircuitPython_GC9D01

./: LICENSE  README.rst  README.rst.license  gc9d01.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml  release_pypi.yml
examples/: gc9d01_simpletest.py
