# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Tyler Crumpton
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-gc9d01"
description = "displayio driver for GC9D01 TFT LCD displays"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Tyler Crumpton", email = "tyler@crump.space"}
]
urls = {Homepage = "https://github.com/tylercrumpton/CircuitPython_GC9D01"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "gc9d01",
    "tft",
    "lcd",
    "gc9d01",
    "displayio",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["gc9d01"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
